# personal_AI

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
personal_ai/: main.py  util.py
personal_ai/ai/: openai_api.py  pinecone_api.py
personal_ai/pdf/: upload_pdf.py
