[tool.poetry]
name = "personal-ai"
version = "0.1.0"
description = ""
authors = ["sehwan505 <sehwan505@gmail.com>"]
readme = "README.md"
packages = [{include = "personal_ai"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.12"
openai = "^0.27.5"
mysqlclient = "^2.1.1"
tiktoken = "^0.3.3"
pinecone-client = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
